네비게이션 컨텐츠 추가

--- a/dev/index.html
+++ b/dev/index.html
@@ -6,7 +6,11 @@
 	<body>
 		<h1>javascript</h1>
 		<nav>
-			
+			<ol>
+				<li>Javascript란</li>
+				<li>데이타타입</li>
+				<li>연산자</li>
+			</ol>
 		</nav>
 	</body>
 </html>
