--- a/dev/index.html
+++ b/dev/index.html
@@ -7,15 +7,18 @@
 		<h1>javascript</h1>
 		<nav>
 			<ol>
-				<li>Javascript란</li>
-				<li>데이타타입</li>
-				<li>연산</li>
+				<li><a href="topic1.html">Javascript란</a></li>
+				<li><a href="topic2.html">데이타타입</a></li>
+				<li><a href="topic3.html">연산</a></li>
 			</ol>
 		</nav>
 		<article>
 			<h2>
 				Javascript란?
 			</h2>
+			<div>
+				자바스크립트란 무엇일까?
+			</div>
 		</article>
 	</body>
 </html>
