floating에 대한 설명

--- a/dev/topic1.html
+++ b/dev/topic1.html
@@ -8,7 +8,11 @@
 				padding:17px;
 				border-bottom: 1px solid gray;
 			}
+			nav , article{
+				float:left;
+			}
 		</style>
+
 	</head>
 	<body>
 		<h1>javascript</h1>
