css를 이용한 플로팅 처리, 이미지 처리

--- a/dev/topic1.html
+++ b/dev/topic1.html
@@ -8,8 +8,13 @@
 				padding:17px;
 				border-bottom: 1px solid gray;
 			}
-			nav , article{
+			nav {
 				float:left;
+				border-right:1px solid gray;
+			}
+			article {
+				float:left;
+				background-image: url("")
 			}
 		</style>
 
