--- a/dev/index.html
+++ b/dev/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
+		<input type="button" value="test" onclick="alert('hello')" />
 		<h1>javascript</h1>
 		<nav>
 			<ol>
