상대주소와 절대주소에 대하여

--- a/dev/topic1.html
+++ b/dev/topic1.html
@@ -2,21 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<style>
-			h1{
-				font-size:30px;
-				padding:17px;
-				border-bottom: 1px solid gray;
-			}
-			nav {
-				float:left;
-				border-right:1px solid gray;
-			}
-			article {
-				float:left;
-				background-image: url("")
-			}
-		</style>
+		 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<!-- Bootstrap -->
+    	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+		
 
 	</head>
 	<body>
@@ -36,5 +25,8 @@
 				자스크립트 설명
 			</div>
 		</article>
+
+		<script src="http://code.jquery.com/jquery.js"></script>
+    	<script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
