--- a/dev/topic1.html
+++ b/dev/topic1.html
@@ -4,12 +4,10 @@
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     	<!-- Bootstrap -->
-    	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-		
-
+    	<link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
-		<h1>javascript</h1>
+		<h1 class="selected">javascript</h1>
 		<nav>
 			<ol>
 				<li><a href="topic1.html">Javascript란</a></li>
