--- a/dev/topic1.html
+++ b/dev/topic1.html
@@ -25,6 +25,6 @@
 		</article>
 
 		<script src="http://code.jquery.com/jquery.js"></script>
-    	<script src="js/bootstrap.min.js"></script>
+    	<script src="./bootstrap/js/bootstrap.min.js"></script>
 	</body>
 </html>
