--- a/dev/topic1.html
+++ b/dev/topic1.html
@@ -5,8 +5,33 @@
 		 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     	<!-- Bootstrap -->
     	<link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    	<link href="./bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+
 	</head>
 	<body>
+		<div class="navbar">
+		  <div class="navbar-inner">
+		    <div class="container">
+		 
+		      <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+		      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </a>
+		 
+		      <!-- Be sure to leave the brand out there if you want it shown -->
+		      <a class="brand" href="#">Javasript</a>
+		 
+		      <!-- Everything you want hidden at 940px or less, place within here -->
+		      <div class="nav-collapse collapse">
+		        <!-- .nav, .navbar-search, .navbar-form, etc -->
+		      </div>
+		 
+		    </div>
+		  </div>
+		</div>
+
 		<h1 class="selected">javascript</h1>
 		<nav>
 			<ol>
