스카폴딩 적용

--- a/dev/topic1.html
+++ b/dev/topic1.html
@@ -45,15 +45,19 @@
 			<li><a href="topic3.html">연산</a></li>
 		</ol>
 	</nav>
-	<article>
-		<h2>
+	
+	<div class="row">
+		<nav class="span4">
+			<h2>
 			Javascript란?
-		</h2>
-		<div>
+			</h2>
+		</nav>
+		<article class="span8">
+			<div>
 			자스크립트 설명
-		</div>
-	</article>
-
+			</div>
+		</article>
+	</div>
 	<script src="http://code.jquery.com/jquery.js"></script>
 	<script src="./bootstrap/js/bootstrap.min.js"></script>
 </body>
